--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,7 +6,7 @@ pipeline {
             steps {
                 // Cloner le dépôt Jenkinsfile
                 git branch: 'main', 
-                    url: 'https://github.com/yesminezaghdene03/jenkinsfile.git', 
+                    url: 'https://github.com/yesminezaghdene03/jenkinsfile.git' // Suppression de la virgule ici
             }
         }
 
@@ -21,8 +21,8 @@ pipeline {
                 withSonarQubeEnv('sonarQube') { // Utiliser l'ID de votre serveur SonarQube configuré dans Jenkins
                     sh '''
                         mvn sonar:sonar \
-                        -Dsonar.projectKey=sonarQube1 // Remplacez par la clé de votre projet
-                        -Dsonar.projectName=sonarQube1 // Remplacez par le nom de votre projet
+                        -Dsonar.projectKey=sonarQube1 \ // Remplacez par la clé de votre projet
+                        -Dsonar.projectName=sonarQube1 \ // Remplacez par le nom de votre projet
                         -Dsonar.projectVersion=1.0 \
                         -Dsonar.login=behsy9-cynnyq-qaVguV
                     ''' // Assurez-vous que cette ligne se termine par ''' et non par '.
